<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agent"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/module_agent" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/module_todo" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/module_admin" />
        <item
            android:id="@+id/nav_angular20"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/module_angular20" />
    </group>
</menu>
